# password-hasher-worker

./: .gitattributes  .gitignore  Cargo.toml  README.md  clippy.toml  eslint.config.js  package.json  tsconfig.json  vitest.config.ts
benchmark/: tsconfig.json
benchmark/src/: client.ts  compliance.test.ts  integration.test.ts  phc.ts  runner.ts  stats.ts  types.ts
workers/benchmark-proxy/: tsconfig.json  wrangler.jsonc
workers/benchmark-proxy/src/: index.ts
workers/password-hasher/: Cargo.toml  entry.mjs  wrangler.jsonc
workers/password-hasher/src/: error.rs  hash.rs  lib.rs
